Updated wrap fix

--- a/css/app.css
+++ b/css/app.css
@@ -159,7 +159,6 @@ a {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
-    flex-wrap: wrap;
     width: 100%;
   }
   .card-container a .card-img {
@@ -567,6 +566,8 @@ a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
