--- a/css/pages/_work.scss
+++ b/css/pages/_work.scss
@@ -3,6 +3,7 @@
 	main {
 		.projects {
 			display: flex;
+			flex-wrap: wrap;
 			justify-content: space-between;
 			margin-top: 40px;
 		}
